--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
             android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
+            android:icon="@drawable/ic_local_grocery_store_black_24dp"
             android:label="@string/app_name"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
@@ -15,6 +15,12 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".EditorActivity"
+            android:parentActivityName=".CatalogActivity"></activity>
+        <provider
+            android:name=".data.ItemProvider"
+            android:authorities="com.example.android.myinventory"
+            android:exported="false"/>
 
     </application>
     
