--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,29 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.example.android.myinventory">
+    package="com.example.android.myinventory">
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
 
     <application
-            android:allowBackup="true"
-            android:icon="@drawable/ic_local_grocery_store_black_24dp"
-            android:label="@string/app_name"
-            android:supportsRtl="true"
-            android:theme="@style/AppTheme">
+        android:allowBackup="true"
+        android:icon="@drawable/ic_local_grocery_store_black_24dp"
+        android:label="@string/app_name"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
+
         <activity android:name=".CatalogActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".EditorActivity"
+        <activity
+            android:name=".EditorActivity"
             android:parentActivityName=".CatalogActivity"></activity>
+
         <provider
             android:name=".data.ItemProvider"
             android:authorities="com.example.android.myinventory"
-            android:exported="false"/>
-
+            android:grantUriPermissions="true" />
     </application>
-    
-    
+
 
 </manifest>
